--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_BASE_URL=http://localhost:3000/api/v1
+CLIENT_URL=http://localhost:5173,https://tiktokk.website,http://tiktokk.website,http://api.tiktokk.website,http://tiktokk.website,https://api.tiktokk.website
