--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.6",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.525.0",
     "module-alias": "^2.2.3",
     "pusher-js": "^8.4.0",
     "quill": "^2.0.3",
