--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@headlessui/react": "^2.2.6",
     "@reduxjs/toolkit": "^2.8.2",
+    "antd": "^5.26.6",
     "axios": "^1.10.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "install": "^0.13.0",
     "lucide-react": "^0.525.0",
     "module-alias": "^2.2.3",
+    "npm": "^11.5.1",
     "pusher-js": "^8.4.0",
     "quill": "^2.0.3",
     "react": "^18.2.0",
@@ -26,16 +30,21 @@
     "react-router-dom": "^7.6.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "sass": "^1.89.2"
+    "sass": "^1.89.2",
+    "tailwind-variants": "^2.0.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "terser": "^5.43.1",
     "vite": "^5.2.0"
   }
