--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "pusher-js": "^8.4.0",
     "quill": "^2.0.3",
     "react": "^18.2.0",
+    "react-avatar": "^5.0.4",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.16.3",
     "react-quill-new": "^3.4.6",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
+    "react-toastify": "^11.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "sass": "^1.89.2",
