--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_BASE_URL=http://localhost:3000/api/v1
+VITE_BASE_URL=https://api.tiktop.io.vn/api/v1
 CLIENT_URL=http://localhost:5173,https://tiktokk.website,http://tiktokk.website,http://api.tiktokk.website,http://tiktokk.website,https://api.tiktokk.website
-VITE_PUBLIC_BASE_URL=http://localhost:3000
+VITE_PUBLIC_BASE_URL=https://api.tiktop.io.vn
 VITE_SOKETI_KEY=2f6cdd2a7f0e4b6b8a51dc82e7e9e370
