--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 VITE_BASE_URL=https://api.tiktop.io.vn/api/v1
-CLIENT_URL=http://localhost:5173,https://tiktokk.website,http://tiktokk.website,http://api.tiktokk.website,http://tiktokk.website,https://api.tiktokk.website
+CLIENT_URL=http://localhost:5173,https://tiktop.io.vn,http://tiktop.io.vn,http://api.tiktop.io.vn,http://tiktop.io.vn,https://api.tiktop.io.vn
 VITE_PUBLIC_BASE_URL=https://api.tiktop.io.vn
 VITE_SOKETI_KEY=2f6cdd2a7f0e4b6b8a51dc82e7e9e370
